Change DB Port 6028>5432 Default and update javadoc